<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">融和财富</string>
    <string name="text_login">登录</string>
    <string name="text_yes">确认</string>
    <string name="text_findback_pwd">找回密码</string>
    <string name="text_reset_pwd">重置密码</string>
    <string name="text_regist">免费注册</string>
    <string name="text_regist2">注册</string>
    <string name="text_setting_login_pwd">设置登录密码</string>
    <string name="text_next_step">下一步</string>
    <string name="text_has_account">已有账号</string>
    <string name="text_input_uname_hint">请输入用户名</string>
    <string name="text_input_yhkh_hint">请输入您的银行卡号</string>
    <string name="text_input_old_pwd_hint">旧登录密码</string>
    <string name="text_input_newpwd_hint">新登录密码</string>
    <string name="text_input_surepwd_hint">请确认新密码</string>
    <string name="text_input_phonenumber_hint">请输入手机号</string>
    <string name="text_input_pwd_hint">请输入密码</string>
    <string name="text_input_yzm_hint">输入短信验证码</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="text_main_page">首页</string>
    <string name="text_licai">理财</string>
    <string name="text_zhanghu">账户</string>
    <string name="text_more">更多</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_get_yzm">获取验证码</string>
    <string name="protocal_notice1">我已阅读并同意</string>
    <string name="protocal_notice2">《注册服务协议》</string>
    <string name="title_activity_find_back">FindBackActivity</string>
    <string name="title_activity_reset_pwd">ResetPwdActivity</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="text_ggxw">公告新闻</string>
    <string name="text_hdzx">活动中心</string>
    <string name="text_yqhyzjl">邀请好友赚奖励</string>
    <string name="text_grzx">个人中心</string>
    <string name="text_gywm">关于我们</string>
    <string name="text_kfrx">客服热线</string>
    <string name="text_yjfk">意见反馈</string>
    <string name="text_xxss">接受推送消息</string>
    <string name="text_qchc">清除缓存</string>
    <string name="text_syts">剩余天数</string>
    <string name="text_gmzq">购买债券</string>
    <string name="text_ptgg">平台公告</string>
    <string name="text_yqhy">邀请好友</string>
    <string name="text_syjs">收益计算</string>
    <string name="text_grxx">个人信息</string>
    <string name="text_zh">账户</string>
    <string name="text_zsxm">真实姓名</string>
    <string name="text_sfzh">身份证号</string>
    <string name="text_yhk">我的银行卡</string>
    <string name="text_zhaq">账户安全</string>
    <string name="text_xgdlmm">修改登录密码</string>
    <string name="text_xgjymm">修改交易密码</string>
    <string name="text_ssmm_close">手势密码已关闭</string>
    <string name="text_ssmm_open">手势密码已开启</string>
    <string name="text_loginout">退出登录</string>
    <string name="text_commit_sure">确定提交</string>
    <string name="text_jshm">手机号码：</string>
    <string name="text_new_login_pwd">新登录密码：</string>
    <string name="text_sure_new_pwd">确认新密码：</string>
    <string name="text_new_pwd_notify_hint">确认登录密码不少于6位</string>
    <string name="text_input_new_login_pwd_twice_hint">再次输入新登录密码</string>
    <string name="login_welcome">融和贷欢迎您！</string>
    <string name="sjh_not_null">手机号不能为空</string>
    <string name="uname_not_null">用户名不能为空</string>
    <string name="yzm_not_null">验证码不能为空</string>
    <string name="pwd_not_null">密码不能为空</string>
    <string name="sjh_format_error">手机号格式有误</string>
    <string name="not_allowed_null">内容不能为空</string>
    <string name="text_bbgx">版本更新</string>
    <string name="text_kfrx_number">400-013-5679</string>
    <string name="text_yjfk_hint">感谢您对融和贷的支持，我们期望您宝贵的意见，请点击输入...</string>
    <string name="text_send">发送</string>
    <string name="text_yryw">如有疑问,可拨打客服热线</string>
    <string name="text_no_login">未登录</string>
    <string name="text_total_zc">总资产(元)</string>
    <string name="text_zc_kyye">可用余额(元)</string>
    <string name="text_zc_ljhdjl">累计获得奖励(元)</string>
    <string name="text_zc_ljsy">累计收益(元)</string>
    <string name="text_cz">充值</string>
    <string name="text_cz_">操作</string>
    <string name="text_ljsy">累计收益</string>
    <string name="text_tx">提现</string>
    <string name="text_myhfzh">我的汇付账号</string>
    <string name="text_mylc">我的理财</string>
    <string name="text_hkjh">回款计划</string>
    <string name="text_jyjl">交易记录</string>
    <string name="text_myyq">我的邀请</string>
    <string name="text_czyhk">充值银行卡</string>
    <string name="text_kh">卡号</string>
    <string name="text_yh">银行</string>
    <string name="text_czje">充值金额</string>
    <string name="text_qrcz">确认充值</string>
    <string name="text_je">金额</string>
    <string name="text_txje">提现金额</string>
    <string name="text_yuan">元</string>
    <string name="text_input_czje_hint">充值金额(50的倍数)</string>
    <string name="text_sjdz_hint">实际到账：%1$.2f元</string>
    <!-- 保留2位小数的浮点数 -->
    <string name="text_kyye_hint">可用余额：%1$.2f元</string>
    <string name="text_sj">时间</string>
    <string name="text_xm">项目</string>
    <string name="text_yh_">已回(元)</string>
    <string name="text_wh">未回(元)</string>
    <string name="text_je_">金额(元)</string>
    <string name="text_ye">余额(元)</string>
    <string name="text_input_txje_hint">请输入提现金额</string>
    <string name="text_sxf">手续费</string>
    <string name="text_tx_notice">1-2个工作日到账(双休和法定节假日除外)</string>
    <string name="text_lktx">立刻提现</string>
    <string name="text_ssf_hint">0.00</string>
    <string name="text_xzyhk">选择银行卡</string>
    <string name="text_tj">添加</string>
    <string name="text_cgyqhy">成功邀请好友</string>
    <string name="text_zcsj">注册时间</string>
    <string name="text_sftz">是否投资</string>
    <string name="text_ljtz">立即投资</string>
    <string name="text_xmze">项目总额</string>
    <string name="text_nhsy">年化收益</string>
    <string name="text_hksj">回款时间：</string>
    <string name="text_xmqx">项目期限：</string>
    <string name="text_hkfs">还款方式：</string>
    <string name="text_sysj">剩余时间：</string>
    <string name="text_xmxx">项目信息</string>
    <string name="text_fkxx">风控信息</string>
    <string name="text_tzjl">投资记录</string>
    <string name="text_cpxx">产品详情</string>
    <string name="text_jkrxx">借款人信息</string>
    <string name="text_xmxx_yhm">用户名：%1$s</string>
    <string name="text_xmxx_xb">性别：%1$s</string>
    <string name="text_xmxx_ywgc">有无购车：%1$s</string>
    <string name="text_xmxx_gzcs">工作城市：%1$s</string>
    <string name="text_xmxx_zsxm">真实姓名：%1$s</string>
    <string name="text_xmxx_csrq">出生日期：%1$s</string>
    <string name="text_xmxx_ywgf">有无购房：%1$s</string>
    <string name="text_xmxx_gznx">工作年限：%1$s</string>
    <string name="text_dybxx">抵押标详情</string>
    <string name="text_dywlx">抵押物类型：%1$s</string>
    <string name="text_pgjz">评估价值：%1$s</string>
    <string name="text_qdsj">取得时间：%1$s</string>
    <string name="text_sqed">授权额度：%1$s</string>
    <string name="text_rzzl">认证资料</string>
    <string name="text_fkpj">DPS风控评级</string>
    <string name="text_fkxx_xy_level">%1$s的信用：%2$s</string>
    <string name="text_xyf">信用分</string>
    <string name="text_zero">0</string>
    <string name="text_fkxx_jbxx">基本信息：%1$s</string>
    <string name="text_fkxx_xyzk">信用状况：%1$s</string>
    <string name="text_fkxx_dywpg">抵押物评估：%1$s</string>
    <string name="text_fkxx_jjnl">经济能力：%1$s</string>
    <string name="text_fkxx_wwdy">外围调研：%1$s</string>
    <string name="text_fkxx_zyqk">职业情况：%1$s</string>
    <string name="text_rhdsc">融和贷审查</string>
    <string name="title_activity_qrtz">QrtzActivity</string>
    <string name="text_yjzsy">预计总收益(元)</string>
    <string name="qztz">确认投资</string>
    <string name="text_input_tzje">请输入投资金额(元)：</string>
    <string name="text_ktje">可投金额(元)：</string>
    <string name="text_zqzz">债券总值(元)：</string>
    <string name="text_gmjg">购买价格(元)：</string>
    <string name="text_kyje">可用金额(元)：</string>
    <string name="text_qrgm">确认购买</string>
    <string name="text_ztxm">直投项目</string>
    <string name="text_zzxm">债转项目</string>
    <string name="text_tzsj">投资时间</string>
    <string name="text_tzje">投资金额(元)</string>
    <string name="text_zqxx">债权信息</string>
    <string name="text_zrbd">转让标的：</string>
    <string name="text_max_zrjg">最高转让价格：</string>
    <string name="text_sxf_">手续费：</string>
    <string name="text_zrje">转让金额：</string>
    <string name="text_ljzr">立即转让</string>
    <string name="text_wxts_title">温馨提示：</string>
    <string name="text_wxts_content1">1, 因债权需受让人先将现金充值到平台，再到第三方支付机构到账审核，需要一个工作日的时间，故出让人在债权转让成功后，需等第三方支付机构审核处理入帐后方能提现，敬请理解。</string>
    <string name="text_wxts_content2">2, 手续费金额会在债权转让成功后从账户中扣除。</string>
    <string name="title_activity_my_licai_category">MyLicaiCategoryActivity</string>
    <string name="time_out">超时</string>
    <string name="network_error">网络错误，请稍后重试</string>
    <string name="server_error">服务器错误，请稍后重试</string>
    <string name="general_error">请求失败，请重试</string>
    <string name="text_zt">状态</string>
    <string name="text_grzhsj">个人账户升级</string>
    <string name="text_kthfzh_notice">请开通汇付托管账户以便您正常理财</string>
    <string name="text_qx">取消</string>
    <string name="text_qkt">去开通</string>
    <string name="text_hftxh">汇付天下号：</string>
    <string name="text_zje">总金额(元)：</string>
    <string name="text_kyzje">可用金额(元)：</string>
    <string name="text_djje">冻结金额(元)：</string>
    <string name="text_getting_yhk_list">正在获取银行卡信息...</string>
    <string name="text_ts">提示</string>
    <string name="text_zztj">正在提交，请稍后...</string>
    <string name="text_yhk_list">银行卡列表</string>
    <string name="download_fail">下载失败</string>
    <string name="download_success">下载完成</string>
    <string name="no_sdcard">SD卡不可用</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="clear_cache_fail"> 清除缓存失败，请重试 </string>
    <string name="text_fxxbb">发现新版本</string>
    <string name="text_zbsj">暂不升级</string>
    <string name="text_ljsj">立即升级</string>
    <string name="text_pwd_allow_chars">内容只能为英文或数字</string>
    <string name="text_verify_len">内容长度至少为6位</string>
    <string name="text_pwd_not_same">两次输入密码不一致</string>
    <string name="loginout_notice">你确定退出登录吗？</string>
    <string name="text_find_new_version">发现新版本</string>
    <string name="text_tc">退出</string>
    <string name="text_input_must_number">金额必须为数字</string>
    <string name="text_number_50ys">金额必须为50的倍数</string>
    <string name="text_number_dy50">金额必须大于50元</string>
    <string name="text_number_dy0">金额必须大于0.00元</string>
    <string name="text_error_data_format">数据格式不合法</string>
    <string name="text_repeat_to_exit">再按一次退出程序</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>

</resources>
