<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gengduo_divider_color"
            android:orientation="vertical">

            <TextView
                style="@style/licai_item_text1_style"
                android:text="@string/text_czje"
                android:padding="15dp"
                android:textSize="@dimen/cz_title_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg_selector"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/licai_item_text1_style"
                        android:text="@string/text_je" />

                    <EditText
                        android:id="@+id/et_je"
                        style="@style/login_page_et_style"
                        android:gravity="center"
                        android:numeric="decimal"
                        android:hint="@string/text_input_czje_hint" />

                    <include layout="@layout/yuan" />
                </LinearLayout>

                <include layout="@layout/divider" />

                <TextView
                    android:id="@+id/tv_sjdz"
                    style="@style/licai_item_text1_style"
                    android:text="@string/text_sjdz_hint"
                    android:layout_width="match_parent"
                    android:gravity="right|center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_cz"
                style="@style/login_btn_style"
                android:text="@string/text_qrcz" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
