<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/panel_gywm"
        style="@style/shouye_4item_1panel_style"
        android:background="@drawable/shouye_4item_one_bg">

        <ImageView
            style="@style/shouye_4item_1iv_style"
            android:background="@drawable/guanyuwomen" />

        <TextView
            android:text="@string/text_gywm"
            style="@style/shouye_4item_1tv_style" />
    </LinearLayout>

    <include layout="@layout/shouye_vertical_divider" />

    <LinearLayout
        android:id="@+id/panel_ptgg"
        style="@style/shouye_4item_1panel_style"
        android:background="@drawable/shouye_4item_one_bg">

        <ImageView
            style="@style/shouye_4item_1iv_style"
            android:background="@drawable/pingtaigonggao" />

        <TextView
            android:text="@string/text_ptgg"
            style="@style/shouye_4item_1tv_style" />
    </LinearLayout>

    <include layout="@layout/shouye_vertical_divider" />

    <LinearLayout
        android:id="@+id/panel_yqhy"
        style="@style/shouye_4item_1panel_style"
        android:background="@drawable/shouye_4item_one_bg">

        <ImageView
            style="@style/shouye_4item_1iv_style"
            android:background="@drawable/yaoqinghaoyou" />

        <TextView
            android:text="@string/text_yqhy"
            style="@style/shouye_4item_1tv_style" />
    </LinearLayout>

    <include layout="@layout/shouye_vertical_divider" />

    <LinearLayout
        android:id="@+id/panel_syjs"
        style="@style/shouye_4item_1panel_style"
        android:background="@drawable/shouye_4item_one_bg">

        <ImageView
            android:background="@drawable/shouyijisuan"
            style="@style/shouye_4item_1iv_style" />

        <TextView
            android:text="@string/text_syjs"
            style="@style/shouye_4item_1tv_style" />
    </LinearLayout>
</LinearLayout>