<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_general_round_corner2">

    <TextView
        android:id="@+id/tv_title"
        style="@style/gengduo_item_tv_style"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/text_fxxbb" />

    <TextView
        android:id="@+id/tv_update_content"
        android:layout_width="match_parent"
        android:layout_gravity="left"
        android:textSize="15sp"
        android:text="1,界面优化;\n2,修复bug;\n3,修复bug;"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="12dp"
        android:singleLine="false"
        android:lineSpacingMultiplier="1.2"
        style="@style/gengduo_item_tv_style" />

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_no"
            style="@style/update_dialog_tv_btn_style"
            android:background="@drawable/update_dialog_no_bg"
            android:text="@string/text_zbsj" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray_line" />

        <TextView
            android:id="@+id/tv_yes"
            style="@style/update_dialog_tv_btn_style"
            android:background="@drawable/update_dialog_yes_bg"
            android:text="@string/text_ljsj" />
    </LinearLayout>

</LinearLayout>